# Tamsilcms-SIEM

./: .env  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  edr.db  errors.md  merged_schema.sql  psa_postgres_schema.sql  requirements.txt  run_all_services.py  run_services.py  siem.db  upload_receiver.py
.github/workflows/: ci.yml
agent/: CMakeLists.txt  README.md  agent.env  agent.py  agent_config.ini  agent_icon.rc  config.py  reader.py  requirements.txt  spool.py  test_named_pipe.cpp
agent-csharp/: SiemAgent.csproj
agent-csharp/src/: Program.cs
agent-csharp/src/Models/: AgentConfig.cs  IngestPayload.cs  LogEvent.cs  LogLine.cs
agent-csharp/src/Services/: LogTailer.cs  SpoolStore.cs
agent/app/: hello_client.py  signing.py
agent/docs/: agent-architecture.md  policy-bundle.md
agent/evidence_packages/ev-001/: metadata.txt
agent/include/: agent_compliance.h  agent_config.h  agent_core.h  agent_crash.h  agent_defence.h  agent_evidence.h  agent_execution.h  agent_heartbeat.h  agent_id.h  agent_identity.h  agent_integrity.h  agent_inventory.h  agent_ipc_shared_memory.h  agent_patch_jobs.h  agent_retry.h  agent_rmm.h  agent_sensor.h  agent_sensor_etw.h  agent_signing.h  agent_system.h  agent_uplink.h  agent_uptime.h  agent_watchdog.h  windows_service_entry.h
agent/ipc/: CMakeLists.txt  README.md  messages.h  named_pipe_ipc.cpp  named_pipe_ipc.h
agent/ipc/proto/: agent_ipc.proto
agent/rust/: Cargo.toml
agent/rust/agent-core/: Cargo.toml  build.rs
agent/rust/agent-core/src/: command_router.rs  compliance.rs  config.rs  edr.rs  evidence.rs  identity.rs  ipc.rs  ipc_router.rs  ipc_validation.rs  main.rs  pipeline.rs  policy.rs  proto.rs  rate_limit.rs  rmm.rs  security.rs  service_registry.rs  siem.rs  telemetry_router.rs  time.rs  update.rs  uplink.rs  vulnerability.rs
agent/rust/agent-watchdog/: Cargo.toml
agent/rust/agent-watchdog/src/: main.rs
agent/src/: agent_config.cpp  agent_crash.cpp  agent_defence.cpp  agent_heartbeat.cpp  agent_id.cpp  agent_integrity.cpp  agent_inventory.cpp  agent_patch_jobs.cpp  agent_retry.cpp  agent_rmm.cpp  agent_signing.cpp  agent_system.cpp  agent_uptime.cpp  agent_watchdog.cpp  main.cpp
agent/src/core/: CMakeLists.txt  compliance.cpp  evidence.cpp  evidence_impl.cpp  evidence_test.cpp  identity.cpp  ipc_server.cpp  main.cpp  service_entry.cpp  uplink.cpp
agent/src/execution/: CMakeLists.txt  ExecutionService_stub.cpp  ExecutionService_stub.h  main.cpp  service_entry.cpp
agent/src/ipc/: shared_memory.cpp
agent/src/launcher/: CMakeLists.txt  main.cpp
agent/src/sensor/: CMakeLists.txt  etw_subscriber.cpp  ipc_client.cpp  main.cpp  service_entry.cpp
agent/src/stubs/: CMakeLists.txt  compliance_stub.cpp  core_stubs.cpp  execution_stub.cpp  identity_stub.cpp  module_registry_stub.cpp  sensor_service_stub.cpp  winservice_stub.cpp
agent/src/userhelper/: CMakeLists.txt  RegisterService_stub.cpp  RegisterService_stub.h  main.cpp  service_entry.cpp
agent/src/watchdog/: CMakeLists.txt  WatchdogService_stub.cpp  WatchdogService_stub.h  main.cpp  service_entry.cpp
agent/src/winservice/: CMakeLists.txt  main.cpp  service_entry.cpp  windows_service_entry.cpp
backend/: api.py  package.json  requirements.txt  run_all_services.py  run_services.py  tsconfig.json
backend/app/: main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py  security.py
backend/app/services/: ingest.py  queries.py
backend/core-services/auditing/: audit.db  requirements.txt
backend/core-services/common/: escalation.py
backend/core-services/identity/: requirements.txt
backend/core-services/patch/: requirements.txt
backend/core-services/psa/: requirements.txt
backend/core-services/rmm/: README.md
backend/core-services/siem/: siem.db
backend/ingestion/app/: config.py  database.py  main.py  storage.py
backend/src/: config.ts  db.ts  index.ts  security.ts  types.ts
backend/src/routes/: agents.ts  ingest.ts  logs.ts
backend/transport/app/: main.py  security.py
core-services/: README.md
core-services/auditing/app/: config.py  models.py
core-services/compliance/app/: config.py
core-services/compliance/tests/: test_failure_modes.py
core-services/detection/app/: config.py  engine.py  explain.py  main.py  models.py  store.py  validation.py
core-services/edr/: requirements.txt
core-services/edr/app/: __init__.py  config.py  models.py
core-services/identity/: README.md
core-services/identity/app/: agents.py  certificates.py  config.py  events.py  main.py  models.py  tasks.py
core-services/patch/: README.md
core-services/patch/app/: config.py  evidence.py  main.py  models.py  policy.py  scheduler.py  store.py
core-services/vulnerability/: README.md
data-model/: README.md  psa_postgres_schema.sql  schema.sql
data-model/schemas/: identifiers.md
db/: schema.sql
docs/: README-ER.md  README-audit.md  README-compliance.md  README-identity.md  README-penetration.md  README-psa.md  README-siem.md  README-transport.md  README.md  mvp-plan.md  package.json
docs/mvp-1/: README.md  identity-service-stub.md  identity-transport-plan.md  transport-pki-notes.md  transport-service-stub.md
docs/mvp-11/: README.md
docs/mvp-12/: README.md
docs/mvp-13/: README.md
docs/mvp-6/: README.md
docs/mvp-8/: README.md
docs/upgrades/: penetration.md  rmm.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: app.ts
ingestion/: README.md
ingestion/app/: config.py  events.py  main.py  models.py  persistence.py  security.py  state.py  storage.py  telemetry.py
package_tmp/: run-backend.bat
policies/: README.md  architecture-boundaries.md  canonical-ids.md
tools/package/: bootstrap.ps1  create_package.ps1
transport/: README.md  requirements.txt
transport/app/: config.py  main.py  models.py  trust.py
transport/pki/: README.md
ui/: README-ui.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  main.tsx
upgrades/: EDRmd  Siem.md  Vulnerability.md  auditing.md  psa.md
(+250 files in other folders)
